# gpui-component

./: Cargo.toml
crates/app/src/: story_workspace.rs
crates/story/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  theme.rs  title_bar.rs
crates/ui/src/dock/: dock.rs  mod.rs  state.rs  tab_panel.rs
crates/ui/src/input/: input.rs
